--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
 				<!-- Header -->
 			  <header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">탈모위키</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">예방 하기</a></li>
+											<li><a href="elements.html">치료 하기</a></li>
+											<li><a href="#">병원 찾기</a></li>
+											<li><a href="#">커뮤니티</a></li>
+											
 										</ul>
 									</div>
 								</li>
@@ -128,9 +128,7 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+						
 					</footer>
 
 			</div>
